--- a/configs/aurora_1d_extended.conf
+++ b/configs/aurora_1d_extended.conf
@@ -24,10 +24,16 @@ TIMES=("00:00" "06:00" "12:00" "18:00")
 FORMAT="netcdf"
 AREA=(90 -180 -90 180) # global
 
-SINGLE_LEVEL_VARIABLES=("2m_temperature")
+SINGLE_LEVEL_VARIABLES=("2m_temperature" 
+                        "10m_u_component_of_wind"
+                        "10m_v_component_of_wind"
+                        "mean_sea_level_pressure"
+                        "total_precipitation_6hr"
+                        "sea_surface_temperature")
 
-MULTI_LEVEL_VARIABLES=("temperature" "specific_humidity")
-LEVELS=(250 500)
-
-ARRAY_STRATEGY="n_years_single_var_all_levels"
-N_YEARS=2
+MULTI_LEVEL_VARIABLES=("temperature" 
+                       "specific_humidity"
+                       "u_component_of_wind"
+                       "v_component_of_wind"
+                       "geopotential")
+LEVELS=(50 100 150 200 250 300 400 500 600 700 850 925 1000)
