debug,agg/regrid

--- a/configs/aurora_6h_extended.conf
+++ b/configs/aurora_6h_extended.conf
@@ -1,8 +1,14 @@
 #!/bin/bash
 
 OUTPUT_DIR="data/era5_cds"
-FREQUENCY="6h"
-RESOLUTION="1440x721"
+
+BASE_FREQUENCY="6h"
+OUT_FREQUENCY=
+AGGREGATION=
+
+BASE_RESOLUTION="1440x721"
+OUT_RESOLUTION= # change if regridding applied, this will be part of the file names
+REGRID_GRID= # cdo-like grid name(e.g. n32)
 
 YEARS=("1940" "1941" "1942" "1943" "1944" "1945" "1946" "1947" "1948" "1949" 
        "1950" "1951" "1952" "1953" "1954" "1955" "1956" "1957" "1958" "1959" 
