--- a/configs/test.conf
+++ b/configs/test.conf
@@ -1,9 +1,15 @@
 #!/bin/bash
 
 OUTPUT_DIR="data_catalogue/era5_cds"
-FREQUENCY="1w"
-AGGREGATE="weekly"
-RESOLUTION="1440x721"
+
+BASE_FREQUENCY="6h"
+OUT_FREQUENCY="1d"
+AGGREGATION="day" # (day, mon, year)
+
+BASE_RESOLUTION="1440x721"
+OUT_RESOLUTION= # change if regridding applied, this will be part of the file names
+REGRID_GRID= # cdo-like grid name(e.g. n32)
+REGRID_CDO_FN= # cdo regirdding function (e.g. remapbil)
 
 YEARS=("2022" "2023" "2024")
 DAYS=("01" "02" "03" "04" "05" "06" "07" "08" "09" "10" 
