add hourly agg, configurations

--- a/configs/aurora_6h-6h-orignal.conf
+++ b/configs/aurora_6h-6h-orignal.conf
@@ -1,10 +1,11 @@
 #!/bin/bash
 
-OUTPUT_DIR="data/era5_cds"
+OUTPUT_DIR="data_catalogue/era5_cds"
 
 BASE_FREQUENCY="6h"
-OUT_FREQUENCY="1d"
-AGGREGATION="day" # (day, mon, year)
+OUT_FREQUENCY=
+AGGREGATION=
+AGGREGATION_ARGS=
 
 BASE_RESOLUTION="1440x721"
 OUT_RESOLUTION= # change if regridding applied, this will be part of the file names
@@ -27,18 +28,31 @@ MONTHS=("01" "02" "03" "04" "05" "06" "07" "08" "09" "10" "11" "12")
 TIMES=("00:00" "06:00" "12:00" "18:00")
 
 FORMAT="netcdf"
-AREA=(90 -180 -90 180) # global
 
-SINGLE_LEVEL_VARIABLES=("2m_temperature" 
-                        "10m_u_component_of_wind"
-                        "10m_v_component_of_wind"
-                        "mean_sea_level_pressure"
-                        "total_precipitation_6hr"
-                        "sea_surface_temperature")
+AREA=(90 -180 -90 180)
+AREA_NAME="global"
 
-MULTI_LEVEL_VARIABLES=("temperature" 
-                       "specific_humidity"
-                       "u_component_of_wind"
-                       "v_component_of_wind"
-                       "geopotential")
-LEVELS=(50 100 150 200 250 300 400 500 600 700 850 925 1000)
+SINGLE_LEVEL_VARIABLES=("2t" 
+                        "10u"
+                        "10v"
+                        "msl")
+
+MULTI_LEVEL_VARIABLES=("t" 
+                       "q"
+                       "u"
+                       "v"
+                       "z")
+
+LEVELS=("50" 
+        "100" 
+        "150" 
+        "200" 
+        "250" 
+        "300" 
+        "400" 
+        "500" 
+        "600" 
+        "700" 
+        "850" 
+        "925" 
+        "1000")
