--- a/configs/100m_uv-1h-1d.conf
+++ b/configs/100m_uv-1h-1d.conf
@@ -1,12 +1,13 @@
 #!/bin/bash
 
-OUTPUT_DIR="data/era5_cds"
+OUTPUT_DIR="data_catalogue/era5_cds"
 
 BASE_FREQUENCY="6h"
-OUT_FREQUENCY=
-AGGREGATION=
+OUT_FREQUENCY="1d"
+AGGREGATION="day"
+AGGREGATION_ARGS=
 
-BASE_RESOLUTION="1440x721"
+BASE_RESOLUTION="1440x361"
 OUT_RESOLUTION= # change if regridding applied, this will be part of the file names
 REGRID_GRID= # cdo-like grid name(e.g. n32)
 
@@ -27,18 +28,12 @@ MONTHS=("01" "02" "03" "04" "05" "06" "07" "08" "09" "10" "11" "12")
 TIMES=("00:00" "06:00" "12:00" "18:00")
 
 FORMAT="netcdf"
-AREA=(90 -180 -90 180) # global
 
-SINGLE_LEVEL_VARIABLES=("2m_temperature" 
-                        "10m_u_component_of_wind"
-                        "10m_v_component_of_wind"
-                        "mean_sea_level_pressure"
-                        "total_precipitation_6hr"
-                        "sea_surface_temperature")
+AREA=(90 -180 0 180)
+AREA_NAME="nh"
 
-MULTI_LEVEL_VARIABLES=("temperature" 
-                       "specific_humidity"
-                       "u_component_of_wind"
-                       "v_component_of_wind"
-                       "geopotential")
-LEVELS=(50 100 150 200 250 300 400 500 600 700 850 925 1000)
+SINGLE_LEVEL_VARIABLES=("100u" "100v")
+
+MULTI_LEVEL_VARIABLES=()
+
+LEVELS=()
