--- a/configs/test.conf
+++ b/configs/test.conf
@@ -5,6 +5,7 @@ OUTPUT_DIR="data_catalogue/era5_cds"
 BASE_FREQUENCY="6h"
 OUT_FREQUENCY="1d"
 AGGREGATION="day" # (day, mon, year)
+AGGREGATION_ARGS=
 
 BASE_RESOLUTION="1440x721"
 OUT_RESOLUTION= # change if regridding applied, this will be part of the file names
