seas5, lower resources

--- a/configs/era5/aurora_1h-6h-extended.conf
+++ b/configs/era5/aurora_1h-6h-extended.conf
@@ -5,7 +5,7 @@ OUTPUT_DIR="data_catalogue/era5_cds"
 BASE_FREQUENCY="1h"
 OUT_FREQUENCY="6h"
 AGGREGATION="timesel"
-AGGREGATION_ARGS="6"
+AGGREGATION_ARGS="6" # e.g. -timesel,6 => base to 6-hourly data
 
 BASE_RESOLUTION="1440x721"
 OUT_RESOLUTION= # change if regridding applied, this will be part of the file names
@@ -56,13 +56,13 @@ MULTI_LEVEL_VARIABLES=("t"
 LEVELS=("1"  # stratopshere
         "10" # stratosphere
         "50" 
-        "100" # drop?
-        "150" 
-        "200" # drop?
+        "100" 
+        "150" # drop?
+        "200" # jet stream
         "250" # jet stream
         "300" # jet stream
         "400" # drop?
-        "500" 
+        "500" # jet stream
         "600" # drop?
         "700" 
         "850" 
