transfer before rm snellius

--- a/configs/era5/aurora_1h-1d-extended.conf
+++ b/configs/era5/aurora_1h-1d-extended.conf
@@ -57,13 +57,13 @@ MULTI_LEVEL_VARIABLES=("t"
 LEVELS=("1"  # stratopshere
         "10" # stratosphere
         "50" 
-        "100" # drop?
-        "150" 
-        "200" # drop?
+        "100" 
+        "150" # drop?
+        "200" # jet stream
         "250" # jet stream
         "300" # jet stream
         "400" # drop?
-        "500" 
+        "500" # jet stream
         "600" # drop?
         "700" 
         "850" 
